# KursPy_5

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  tests_validators.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
