[tool.poetry]
name = "kurspy-5"
version = "0.1.0"
description = ""
authors = ["Yuliya Kuznetsova <juliakuznetsova001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
djangorestframework = "^3.16.0"
drf-yasg = "^1.21.10"
celery = "^5.5.0"
rest-framework-simplejwt = "^0.0.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.5.0"
load-dotenv = "^0.1.0"
timedelta = "^2020.12.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
